Fix Java 17 List access in snapshot test